// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`component: Flex should accept basic built-in props 1`] = `
.c0 {
  box-sizing: border-box;
  position: relative;
  display: block;
  top: -1;
  right: auto;
  bottom: auto;
  left: -1;
  margin: 4px;
  padding: 4px;
  width: 120px;
  height: 120px;
  background-color: hsl(200,10%,20%);
  color: hsl(0,0%,100%);
  border-color: hsl(200,96%,35%);
  border-width: 2px;
  border-radius: 20px;
  border-style: solid;
  z-index: 100;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
}

<div>
  <div
    class="c0"
    color="white"
    display="block"
    height="120px"
    width="120px"
  >
    Content
  </div>
</div>
`;

exports[`component: Flex should accept flex props 1`] = `
.c2 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
}

.c0 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c1 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-self: flex-end;
  -ms-flex-item-align: end;
  align-self: flex-end;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
}

<div>
  <div
    class="c0"
    display="flex"
  >
    <div
      class="c1"
      display="flex"
    />
    <div
      class="c2"
      display="flex"
    />
  </div>
</div>
`;

exports[`component: Flex snapshot with no props 1`] = `
.c0 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
}

<div>
  <div
    class="c0"
    display="flex"
  />
</div>
`;
